Fix :bug: - increase z-index

--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ h2 {
   background-position: center;
   width: 350px;
   height: 420px;
+  border-radius: 10px;
   position: relative;
   transition: filter 0.3s ease; 
 }
@@ -113,6 +114,7 @@ h2 {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.476);
+  border-radius: 10px;
   transition: background-color 0.3s ease;
 }
 
@@ -135,7 +137,6 @@ h2 {
   font-weight: bolder;
 }
 
-
 .service-card.selected .service-image {
   filter: none;
 }
@@ -150,6 +151,7 @@ h2 {
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 1000;
 }
 
 .service-details-card {
@@ -161,6 +163,7 @@ h2 {
   width: 100%;
   opacity: 1;
   position: relative;
+  z-index: 1001;
 }
 
 .close-button {
